# gitree

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md
.github/workflows/: release.yml
src/: git_info.rs  main.rs  platform.rs  progress.rs  render.rs  scan.rs
