[package]
name = "gitree"
version = "0.1.0"
edition = "2024"
description = "Tree view of git repositories under a directory, with current branch and short commit hash."
license = "MIT"
repository = "https://github.com/rtzr/gitree"
readme = "README.md"
keywords = ["git", "cli", "tree", "repositories"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
git2 = { version = "0.20.4", default-features = false }
owo-colors = "4.3.0"
rayon = "1.10"
terminal_size = "0.4.4"
unicode-width = "0.2.2"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
